<resources>
    <string name="app_name">RentaCar</string>
    <string name="login">login\n</string>
    <string name="admin_dashboard">Admin_dashboard</string>
    <string name="availability">Availability</string>
    <string name="daily_rate">Daily Rate</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>